@@ -12,9 +12,16 @@
 # ====================================================================
 
 
+# 2017-01-18
+# --------------------------------------------------------------------
+# + add more sig fit scalings for the externals in scaleSigs()
+# + add more bkg scalings for the externals in scaleBkgs()
+# + add more selection criteria for the extra bkgs in buildMC32()
+# + add more external bkgs to the global input file
+
+
 # 2017-01-17
 # --------------------------------------------------------------------
-
 # + readROOT32() now reads in the file name from backgrounds.txt
 # + global input file now has reuse file name specified
 # + funcs32 has getData32() with build variable option
